// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessDetailsCore should display error state correctly 1`] = `
<business-details-core class="body">
  <style></style>
  <main class="d-flex justify-content-center p-4 text-center" part="detail-empty-state" style="font-size: 1.2rem;">
    <div>
      error
    </div>
  </main>
</business-details-core>
`;

exports[`BusinessDetailsCore should display loading state correclty 1`] = `
<business-details-core class="body">
  <style></style>
  <main class="d-flex justify-content-center p-4 text-center" part="detail-loading-state" style="font-size: 1.2rem;">
    <div class="spinner-border spinner-border-sm" part="detail-loading-spinner" role="status">
      <span class="visually-hidden">
        Loading...
      </span>
    </div>
  </main>
</business-details-core>
`;

exports[`BusinessDetailsCore should set business details correctly to state 1`] = `
<business-details-core class="body">
  <style></style>
  <generic-info-details></generic-info-details>
  <legal-address-details></legal-address-details>
  <representative-details></representative-details>
  <owner-details></owner-details>
  <additional-questions-details></additional-questions-details>
</business-details-core>
`;
